# odonto_auth

./: .gitignore  AGENTS.md  README.md  pyproject.toml
01_stage1_real_image_extraction/: README.md
01_stage1_real_image_extraction/scripts/: build_dataset_flont_yolo.py  train_tooth_seg_flont_v5.py  train_tooth_seg_flont_v6.py  train_tooth_seg_flont_v7.py  train_tooth_seg_flont_v8.py  validate_tooth_seg_flont_v7.py  validate_tooth_seg_real.py
01_stage1_real_image_extraction/tests/: test_real_adaptation_scripts.py
02_stage2_capture_matching/: README.md
02_stage2_capture_matching/config/: quality_gate.json
02_stage2_capture_matching/evaluation/: code_matching_baseline_metrics.csv  code_matching_per_tooth_hog_metrics.csv  code_matching_per_tooth_resnet50_metrics.csv  code_matching_rotv2_baseline_metrics.csv  code_matching_rotv2_per_tooth_hog_metrics.csv  code_matching_rotv2_per_tooth_resnet50_metrics.csv  code_matching_rotv2_v8_baseline_metrics.csv  code_matching_rotv2_v8_bootstrap_intervals.csv  code_matching_rotv2_v8_per_tooth_hog_metrics.csv  code_matching_rotv2_v8_per_tooth_resnet50_metrics.csv  rendered_hog_matching_metrics.csv  tooth_seg_flont_v1_v6_best_scores.csv  tooth_seg_flont_v1_v7_best_scores.csv  v8_real_adaptation_condition_metrics.csv  v8_real_adaptation_overall_metrics.csv  v8_real_adaptation_per_class_metrics.csv
02_stage2_capture_matching/fixtures/: auth_conditions_smoke.csv  auth_scores_smoke.csv  capture_metadata_template.csv  code_complete_dataset_smoke.csv  quality_gate_smoke.json  teeth3ds_render_sources.csv
90_archive/: README.md
(+51 files in other folders)
